--- a/.env
+++ b/.env
@@ -24,9 +24,10 @@ APP_SECRET=61074d18a5a709695a75cf9b2617898c
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/arcadia?serverVersion=8"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="mysql:host=127.0.0.1;port=3306;dbname=arcadia;charset=utf8mb4;username=root;password=Arcadia2024!"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -37,5 +38,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://a252776da84301:9b513cece713fa@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://mateosouquet@gmail.com:titilou01@default
+###< symfony/google-mailer ###
