--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,16 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    # Définition du service PDO
+    pdo_connection:
+        class: PDO
+        arguments:
+            $dsn: 'mysql:host=%env(localhost)%;port=%env(3306)%;dbname=%env(arcadia)%;charset=utf8mb4'
+            $username: 'root'
+            $password: ''
+
+
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -19,6 +29,11 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    
+    App\Controller\AnimalController:
+        calls:
+            - method: setPDO
+              arguments: ['@pdo_connection']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
